@@ -1,5 +1,10 @@
 2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
+	* gtk/gdkgl/ext.py (_pixmap_ext, _window_ext, _register_method) 
+	(_register_ext): Make them "internal use".
+
+2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
 	* examples/low-level.py: 
 	* examples/color.py: 
 	* examples/share-lists.py: Removed unnecessary code.
